# Placelook

./: README.md  arcgis_maps_core  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
arcgis_maps_package/: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  install.json  pubspec.yaml
arcgis_maps_package/android/: build.gradle  settings.gradle
arcgis_maps_package/arcgis_maps_core/: prebuild_label.txt
arcgis_maps_package/example/: README.md  analysis_options.yaml  arcgis_maps_core  pubspec.yaml
arcgis_maps_package/ios/: arcgis_maps.podspec
arcgis_maps_package/lib/: arcgis_maps.dart
arcgis_maps_package/src/: CMakeLists.txt  arcgis_maps.c  arcgis_maps.h
assets/mock/: profiles.json  token.txt  user.json  users.json  walks.json
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/api/: LocalRepository.dart  LocalRepositoryImpl.dart  RepositoryMockImpl.dart  auth_repositori_mock_impl.dart  auth_repository.dart  auth_repository_mock_impl.dart  auth_repository_mongo.dart  dio.dart  local_repository.dart  local_repository_impl.dart  remote_repository.dart  repository.dart  userRepository_mongo.dart  user_repository.dart  user_repository_mongo.dart  walk_repository.dart  walt_repository_mock_impl.dart
lib/l10n/: app_en.arb  app_uk.arb
lib/mocks/: walks_mock.dart
lib/model/: Contact.dart  (+34 more)
linux/: CMakeLists.txt  my_application.cc
screens/: README.md
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+155 files in other folders)
